--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aragon/ui": "^0.37.0",
     "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-masonry-component": "^6.2.1",
     "react-router-dom": "^5.0.0",
-    "styled-components": "^4.2.0",
     "web3": "^1.0.0-beta.54"
   },
   "devDependencies": {
