--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "NODE_ENV=production npx webpack",
-    "dev-server": "NODE_ENV=development npx webpack-dev-server",
-    "server": "npx http-server ./build"
+    "dev-server": "npx webpack-dev-server --open",
+    "server": "NODE_ENV=production npx webpack-dev-server --open"
   },
   "keywords": [],
   "author": "",
@@ -29,7 +29,6 @@
     "babel-plugin-styled-components": "^1.10.0",
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
-    "http-server": "^0.11.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
