--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "NODE_ENV=production npx webpack",
+    "build": "NODE_ENV=production npx webpack -p",
+    "deploy": "npm run build; aws s3 sync build/ s3://block-explorer.ryanrhall.com",
     "dev-server": "npx webpack-dev-server --open",
     "server": "NODE_ENV=production npx webpack-dev-server --open"
   },
