--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "NODE_ENV=production npx webpack -p",
+    "build": "NODE_ENV=production npx webpack",
     "deploy": "npm run build; aws s3 sync build/ s3://block-explorer.ryanrhall.com",
     "dev-server": "npx webpack-dev-server --open",
     "server": "NODE_ENV=production npx webpack-dev-server --open"
@@ -29,6 +29,7 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-styled-components": "^1.10.0",
     "css-loader": "^2.1.1",
+    "dotenv-webpack": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
